[package]
name = "tableng"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
hashbrown = "0.14.0"
ordered-float = "3.7.0"
pest = "2.7.1"
pest_derive = "2.7.1"
radix_fmt = "1.0.0"
regalloc2 = "0.9.2"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.44"


[[bin]]
name = "interpreter"

[profile.release]
lto = true
panic = "abort"
